2003-09-20  Pierre-Luc Paour <gallery@paour.com> (1.2-b1)

	* Integrated patch by Markus Cozowicz to provide feedback during long
	  uploads. Thanks Markus!
	* Created a new modal progress dialog for uploads. It shows much
	  more info, and is cancelable. The normal progress bar has been
	  improved to be less fickle when two things happen at the same
	  time.
	* Optionally ignore the return code of spawned applications. This is
	  to work around what I think is a Java VM bug on Linux where the
	  return code is wrong.
	* Amedeo Paglione started work on i18n. A simple framework is in place
	  and he's starting to externalize all UI strings.

2003-09-12  Pierre-Luc Paour <gallery@paour.com> (1.1)

	* Shipped GR 1.1

2003-09-06  Pierre-Luc Paour <gallery@paour.com> (1.1-RC1-b1)

	* Fixed incompatibility with Java 1.3: I was trying to catch an exception
	  that Java 1.3 doesn't know about, so the class was not even loadable.
	* GR is now built for the Mac differently than for other architectures.
	  MacOS enjoys something akin to the "French Exception". Or in this case
	  the Italian exception, since this was led by Amedeo Paglione.

2003-08-22  Pierre-Luc Paour <gallery@paour.com> (1.1-RC1)

	* Catching error when using SSL with an untrusted server
	  certificate.

2003-07-26  Pierre-Luc Paour <gallery@paour.com> (1.1-b14)

	* Added keyboard handling so when the user is editing captions
	  and extra fields, the tab and up/down arrows do the expected and
	  useful thing (thanks joel558).

2003-07-19  Pierre-Luc Paour <gallery@paour.com> (1.1-b13)

	* Added a jpegQuality field to the ImageMagick settings.
	* Better handling of null username or password.
	* Clearing cookies when Log out is clicked, so it's possible
	  to log in with different credentials without having to restart GR.

2003-07-01  Pierre-Luc Paour <gallery@paour.com> (1.1-b12)

	* Uses a shutdown handler on Mac for those folks who use Cmd-Q to quit.