@@ -1,5 +1,0 @@
-@echo off
-
-set CLASSPATH=.;build
-
-java com.gallery.GalleryRemote.GalleryRemote
