@@ -1,3 +1,0 @@
-
-java -classpath build com.gallery.GalleryRemote.GalleryRemote
-
